# sentencepiece-feedstock

./: .recipe_maintainers.json  README.md
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  linux_64_libprotobuf3.21.yaml  linux_64_libprotobuf4.23.2.yaml  linux_64_libprotobuf4.23.3.yaml  linux_64_libprotobuf4.23.yaml  linux_64_python_implcpython.yaml  linux_aarch64_.yaml  linux_aarch64_libprotobuf3.21.yaml  linux_aarch64_libprotobuf4.23.2.yaml  linux_aarch64_libprotobuf4.23.3.yaml  linux_aarch64_libprotobuf4.23.yaml  linux_aarch64_python_implcpython.yaml  linux_ppc64le_.yaml  linux_ppc64le_libprotobuf3.21.yaml  linux_ppc64le_libprotobuf4.23.2.yaml  linux_ppc64le_libprotobuf4.23.3.yaml  linux_ppc64le_libprotobuf4.23.yaml  linux_ppc64le_python_implcpython.yaml  osx_64_.yaml  osx_64_libprotobuf3.21.yaml  osx_64_libprotobuf4.23.2.yaml  osx_64_libprotobuf4.23.3.yaml  osx_64_libprotobuf4.23.yaml  osx_64_python_implcpython.yaml  osx_arm64_.yaml  osx_arm64_libprotobuf3.21.yaml  osx_arm64_libprotobuf4.23.2.yaml  osx_arm64_libprotobuf4.23.3.yaml  osx_arm64_libprotobuf4.23.yaml  win_64_.yaml  win_64_libprotobuf4.23.2.yaml  win_64_libprotobuf4.23.3.yaml  win_64_libprotobuf4.23.yaml  win_64_python_implcpython.yaml
.github/: CODEOWNERS
.scripts/: run_osx_build.sh
recipe/: bld.bat  build-lib.bat  build-lib.sh  build-pkg.bat  build-pkg.sh  build.sh  conda_build_config.yaml  meta.yaml  patch_generated_proto.patch  test_sentencepiece.bat  test_sentencepiece.sh
recipe/cmake_test/: CMakeLists.txt  test_me.cxx
(+64 files in other folders)
